nova rota: Listar vagas por dia
