# api/routes/calendario.routes.js
@@ -1,7 +1,8 @@
 const express = require("express");
 const router = express.Router();
-const {listarTodosAgendamentos} = require("../models/calendario.js");
+const {listarTodosAgendamentos, listarVagasPorDia} = require("../models/calendario.js");
 
 router.get("/:id_escritorio/:mes/:ano", listarTodosAgendamentos);
+router.get("/:id_escritorio", listarVagasPorDia);
 
 module.exports = router;
